--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
     <h1>ÇözümNet - Tüm Ders Yayınevleri Tek Yerde</h1>
     <div class="container">
-        <a href="" class="button">Yayınevi 1</a>
+        <a href="" class="button">Hız</a>
         <a href="" class="button">Yayınevi 2</a>
         <a href="" class="button">Yayınevi 3</a>
         <a href="" class="button">Yayınevi 4</a>
