--- a/index.html
+++ b/index.html
@@ -2,7 +2,129 @@
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, in<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ÇözümNet - Yayınevleri</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            color: #333;
+        }
+        .search-container {
+            margin-bottom: 20px;
+        }
+        .search-box {
+            width: 80%;
+            max-width: 400px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        .container {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+            gap: 10px;
+            max-width: 900px;
+            margin: auto;
+        }
+        .button {
+            background-color: #007BFF;
+            color: white;
+            padding: 10px;
+            text-decoration: none;
+            border-radius: 5px;
+            text-align: center;
+            display: block;
+            transition: 0.3s;
+        }
+        .button:hover {
+            background-color: #0056b3;
+        }
+    </style>
+    <script>
+        function searchPublishers() {
+            let input = document.getElementById('searchBox').value.toLowerCase();
+            let buttons = document.querySelectorAll('.button');
+            buttons.forEach(button => {
+                if (button.textContent.toLowerCase().includes(input)) {
+                    button.style.display = "block";
+                } else {
+                    button.style.display = "none";
+                }
+            });
+        }
+    </script>
+</head>
+<body>
+    <h1>ÇözümNet - Tüm Ders Yayınevleri Tek Yerde</h1>
+    <div class="search-container">
+        <input type="text" id="searchBox" class="search-box" onkeyup="searchPublishers()" placeholder="Yayınevi ara...">
+    </div>
+    <div class="container">
+        <a href="" class="button">Yayınevi 1</a>
+        <a href="" class="button">Yayınevi 2</a>
+        <a href="" class="button">Yayınevi 3</a>
+        <a href="" class="button">Yayınevi 4</a>
+        <a href="" class="button">Yayınevi 5</a>
+        <a href="" class="button">Yayınevi 6</a>
+        <a href="" class="button">Yayınevi 7</a>
+        <a href="" class="button">Yayınevi 8</a>
+        <a href="" class="button">Yayınevi 9</a>
+        <a href="" class="button">Yayınevi 10</a>
+        <a href="" class="button">Yayınevi 11</a>
+        <a href="" class="button">Yayınevi 12</a>
+        <a href="" class="button">Yayınevi 13</a>
+        <a href="" class="button">Yayınevi 14</a>
+        <a href="" class="button">Yayınevi 15</a>
+        <a href="" class="button">Yayınevi 16</a>
+        <a href="" class="button">Yayınevi 17</a>
+        <a href="" class="button">Yayınevi 18</a>
+        <a href="" class="button">Yayınevi 19</a>
+        <a href="" class="button">Yayınevi 20</a>
+        <a href="" class="button">Yayınevi 21</a>
+        <a href="" class="button">Yayınevi 22</a>
+        <a href="" class="button">Yayınevi 23</a>
+        <a href="" class="button">Yayınevi 24</a>
+        <a href="" class="button">Yayınevi 25</a>
+        <a href="" class="button">Yayınevi 26</a>
+        <a href="" class="button">Yayınevi 27</a>
+        <a href="" class="button">Yayınevi 28</a>
+        <a href="" class="button">Yayınevi 29</a>
+        <a href="" class="button">Yayınevi 30</a>
+        <a href="" class="button">Yayınevi 31</a>
+        <a href="" class="button">Yayınevi 32</a>
+        <a href="" class="button">Yayınevi 33</a>
+        <a href="" class="button">Yayınevi 34</a>
+        <a href="" class="button">Yayınevi 35</a>
+        <a href="" class="button">Yayınevi 36</a>
+        <a href="" class="button">Yayınevi 37</a>
+        <a href="" class="button">Yayınevi 38</a>
+        <a href="" class="button">Yayınevi 39</a>
+        <a href="" class="button">Yayınevi 40</a>
+        <a href="" class="button">Yayınevi 41</a>
+        <a href="" class="button">Yayınevi 42</a>
+        <a href="" class="button">Yayınevi 43</a>
+        <a href="" class="button">Yayınevi 44</a>
+        <a href="" class="button">Yayınevi 45</a>
+        <a href="" class="button">Yayınevi 46</a>
+        <a href="" class="button">Yayınevi 47</a>
+        <a href="" class="button">Yayınevi 48</a>
+        <a href="" class="button">Yayınevi 49</a>
+        <a href="" class="button">Yayınevi 50</a>
+        <!-- 50 tane daha buton eklenecek -->
+    </div>
+</body>
+</html>
+itial-scale=1.0">
     <title>ÇözümNet - Yayınevleri</title>
     <style>
         body {
