--- a/index.html
+++ b/index.html
@@ -204,14 +204,14 @@
             setTimeout(function() {
                 document.getElementById('loading-screen').style.display = 'none';
                 document.getElementById('main-content').style.display = 'block';
-            }, 1500);  // 2.5 saniye sonra geçiş
+            }, 1000);  // 1.0 saniye sonra geçiş
         }
     </script>
 </head>
 <body>
     <!-- Yükleniyor Ekranı -->
     <div id="loading-screen" class="loading-screen">
-        <div class="loading-message">Bir saniye, yükleniyor...</div>
+        <div class="loading-message">Bir saniye...</div>
         <div class="loading-spinner"></div>
     </div>
 
@@ -230,23 +230,48 @@
         </div>
 
         <div class="container">
-            <a href="" class="button">Hız</a>
-            <a href="" class="button">Okyanus</a>
-            <a href="" class="button">Karekök</a>
-            <a href="" class="button">Final</a>
-            <a href="" class="button">Sınav</a>
-            <a href="" class="button">Bir</a>
-            <a href="" class="button">Doğa</a>
-            <a href="" class="button">Yediiklim</a>
-            <a href="" class="button">Fen Bilimleri</a>
-            <a href="" class="button">Pusula</a>
-            <a href="" class="button">Bilfen</a>
-            <a href="" class="button">Kültür</a>
-            <a href="" class="button">Zeka</a>
-            <a href="" class="button">Efsane</a>
-            <a href="" class="button">Vizyon</a>
-            <a href="" class="button">Akıl Küpü</a>
-            <a href="" class="button">Kampüs</a>
+            <a href="https://hizvideo.frns.in/" class="button">Hız</a>
+            <a href="https://karekokvideocozum.com/" class="button">Karekök</a>
+            <a href="https://sonucvideo.frns.in/" class="button">Sonuç</a>
+            <a href="https://dijital.deltakitap.com/SolutionApp/SolutionsByCategory/Index" class="button">Delta</a>
+            <a href="https://ankaravideo.frns.in/?action=source_list&id=2" class="button">Ankara</a>
+            <a href="https://www.3dyayinlari.com/video-cozumler" class="button">3D</a>
+            <a href="https://yanitvideo.frns.in/?action=source_list&id=21736" class="button">Yanıt</a>
+            <a href="https://www.egitimvadisi.com.tr/video-cozumler" class="button">Eğitim Vadisi</a>
+            <a href="https://newtonvideo.frns.in/" class="button">Newton</a>
+            <a href="https://orjinalvideo.frns.in/" class="button">Orijinal</a>
+            <a href="https://orjinalvideo.frns.in/" class="button">Esen</a>
+            <a href="https://bilgisarmalvideo.frns.in/" class="button">Bilgi Sarmal</a>
+            <a href="https://mozaikvideo.frns.in/" class="button">Mozaik</a>
+            <a href="https://parafyayinlari.com/video-cozumler" class="button">Paraf</a>
+            <a href="https://fddformul.com/" class="button">Fon</a>
+            <a href="https://apotemivideo.frns.in/" class="button">Apotemi</a>
+            <a href="https://www.cantadavideo.com/" class="button">Çanta</a>
+            <a href="https://gunayvideo.frns.in/?action=source_list&id=1" class="button">Günay</a>
+            <a href="https://fenomenvideo.frns.in/" class="button">Fenomen</a>
+            <a href="https://bilfenvideo.frns.in/" class="button">Bilfen</a>
+            <a href="https://www.altinkarne.com/video-cozumler" class="button">Nartest</a>
+            <a href="https://sinavvideo.frns.in/" class="button">Sınav</a>
+            <a href="https://dijital.hocalarageldik.com/SolutionApp/SolutionAppPublic/Index" class="button">Hocalara Geldik</a>
+            <a href="https://www.yargiyayinevi.com/md-pdf-cozumleri?srsltid=AfmBOoqEUjwl8wMlX9BqXWaNjsAGwyynyQ7HeKk0VLnCxUBl_MTro46k" class="button">Yargı</a>
+            <a href="https://simyavideo.frns.in/" class="button">Simya</a>
+            <a href="https://orbim.in/ata/u345161" class="button">Ata</a>
+            <a href="https://mubavideo.frns.in/" class="button">Muba</a>
+            <a href="https://dijital.palmeyayinevi.com/SolutionApp/SolutionAppPublic/Index" class="button">Palme</a>
+            <a href="https://limitvideo.frns.in/" class="button">Limit</a>
+            <a href="https://unlulerkarmasivideo.frns.in/" class="button">Ünlüler Karması</a>
+            <a href="https://gizlivideo.frns.in/?action=source_list&id=2" class="button">Gizli</a>
+            <a href="https://referansvideo.frns.in/?action=source_list&id=2" class="button">Referans</a>
+            <a href="https://arivideo.frns.in/" class="button">Arı</a>
+            <a href="https://aydindijital.com/SolutionApp/SolutionAppPublic/Index" class="button">Aydın</a>
+            <a href="https://vipvideo.frns.in/?action=source_list&id=2" class="button">VIP</a>
+            <a href="https://netfenvideo.frns.in/" class="button">Netfen</a>
+            <a href="https://akademikbasarivideo.frns.in/?action=source_list&id=2" class="button">Akademik B.</a>
+            <a href="https://www.tammatcozum.com/" class="button">Tammat</a>
+            <a href="https://seviyevideo.frns.in/" class="button">Seviye</a>
+            <a href="https://odtululervideocozum.frns.in/" class="button">Odtülüler</a>
+            <a href="https://derecevideo.frns.in/" class="button">Derece</a>
+            
             <a href="" class="button">Rehber</a>
             <a href="" class="button">Panorama</a>
             <a href="" class="button">Marmara</a>
@@ -268,5 +293,9 @@
             <a href="" class="button">Para</a>
         </div>
     </div>
+
 </body>
+<hr>
+<p style="font-size: 14px; color: #666;">İletişim: <a href="mailto:cozumnet10@gmail.com" style="color: #007BFF; text-decoration: none;">cozumnet10@gmail.com</a></p>
+<p style="font-size: 12px; color: #666;">&copy; 2025 ÇözümNet. Tüm hakları saklıdır.</p>x
 </html>
