--- a/index.html
+++ b/index.html
@@ -272,25 +272,25 @@
             <a href="https://odtululervideocozum.frns.in/" class="button">Odtülüler</a>
             <a href="https://derecevideo.frns.in/" class="button">Derece</a>
             
-            <a href="" class="button">Rehber</a>
-            <a href="" class="button">Panorama</a>
-            <a href="" class="button">Marmara</a>
-            <a href="" class="button">Ezgi</a>
-            <a href="" class="button">Köprü</a>
-            <a href="" class="button">Test</a>
-            <a href="" class="button">Beyaz</a>
-            <a href="" class="button">Genç Kalemler</a>
-            <a href="" class="button">Beylikdüzü</a>
-            <a href="" class="button">Hedef</a>
-            <a href="" class="button">Deniz</a>
-            <a href="" class="button">Eğitim Dünyası</a>
-            <a href="" class="button">Altınbaş</a>
-            <a href="" class="button">Eğitim</a>
-            <a href="" class="button">Birsen</a>
-            <a href="" class="button">Sınav Koleji</a>
-            <a href="" class="button">Yaprak</a>
-            <a href="" class="button">Akit</a>
-            <a href="" class="button">Para</a>
+            <a href="https://stratejivideo.frns.in/?action=source_list&id=2" class="button">Strateji</a>
+            <a href="https://www.altinkarne.com/video-cozumler" class="button">Altın Karne</a>
+            <a href="https://adayyayinlari.com/video-cozumler" class="button">Aday</a>
+            <a href="https://hizrenkvideo.frns.in/" class="button">Hız Ve Renk</a>
+            <a href="https://www.armadayayinlari.com/SolutionApp/SolutionAppPublic/Index" class="button">Armada</a>
+            <a href="https://www.fideocozum.com/" class="button">Fi</a>
+            <a href="https://www.dakikavideocozum.com/" class="button">Dakika</a>
+            <a href="https://cozum.yayinicerik.com/" class="button">Yayın İçerik</a>
+            <a href="https://cozum.egitimicerik.com/" class="button">Eğitim İçerik</a>
+            <a href="https://www.spoileryayinlari.com/video-cozumler" class="button">Spoiler</a>
+            <a href="https://yayindenizivideo.frns.in/" class="button">Yayın Denizi</a>
+            <a href="https://puankocum.com/soru-cozumleri" class="button">Puan Koçum</a>
+            <a href="https://www.liderlerkarmasi.com/video-cozumler" class="button">Liderler Karması</a>
+            <a href="https://esenvideo.frns.in/" class="button">Esen</a>
+            <a href="https://oksijenvideo.frns.in/?action=source_list&id=2" class="button">Oksijen</a>
+            <a href="https://sinavvideo.frns.in/" class="button">Sınav</a>
+            <a href="https://toprakvideo.frns.in/" class="button">Toprk</a>
+            <a href="https://www.dakikavideocozum.com/" class="button">Dakika</a>
+            <a href="https://www.artidijitalim.com/Cozumler/KitapListView?layout=True&turId=0&seviyeId=0&dersId=0&seriId=0" class="button">Artı Bir</a>
         </div>
     </div>
 
